--- a/Research Website/style.css
+++ b/Research Website/style.css
@@ -1,18 +1,15 @@
 /* Class CSS */
 
-ul {
-    list-style: none;
-}
-
-.step {
+.accordion-item {
     background-color: #fff;
     transition: background-color 1s linear;
 }
 
-.step:hover {
+.accordion-item:hover {
     background-color: #aad0e1;
     transition: background-color 1s linear;
 }
+
 
 hr {
     border: 3px;
@@ -29,6 +26,7 @@ hr {
 
 .overview .border-color, .showcase .border-color {
     border: 4px solid maroon;
+    border-radius: 20px;
 }
 
 .icon-white {
