--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 /* Class CSS */
 
-.accordion-item {
-    background-color: #fff;
-    transition: background-color 1s linear;
+.author {
+    background-color: #b39db0;
 }
 
-.accordion-item:hover {
-    background-color: #aad0e1;
-    transition: background-color 1s linear;
+.procedure {
+    background-color: #b090b3;
+}
+
+.accordion-item {
+    background-color:#aad0e1;
+}
+
+.accordion-button {
+    background-color: #afcad6;
 }
 
 
@@ -24,9 +30,14 @@ hr {
     background-color: #8ab2c5;
 }
 
-.overview .border-color, .showcase .border-color {
+.border-color{
     border: 4px solid maroon;
     border-radius: 20px;
+}
+
+.card{
+    border: 4px solid maroon;
+    border-radius: 5px;
 }
 
 .icon-white {
@@ -40,14 +51,13 @@ hr {
 }
 
 .nb-bg-color:hover {
-    background-color: #03aba8;
-    transition: background-color 3s ease-out;
+    background-color: #29005e;
+    transition: background-color 10s ease-out;
 }
 
 .footer {
     background-color: #58004d;
 }
-
 
 
 
